force-app/main/default/objects/Application_Booking_Call_Detail__c/Application_Booking_Call_Detail__c.object-meta.xml
<CustomObject>
    <label>Application/ Booking Call Detail</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Application/ Booking Call Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application/ Booking Call Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>