force-app/main/default/objects/Application_Booking_Call_Detail__c/fields/Call_by__c.field-meta.xml
<CustomField>
    <fullName>Call_by__c</fullName>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Call by</label>
    <type>Text</type>
</CustomField>