force-app/main/default/objects/Application_Booking_Call_Detail__c/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incoming Call</fullName>
                <default>true</default>
                <label>Incoming Call</label>
            </value>
            <value>
                <fullName>Birthday Call</fullName>
                <isActive>false</isActive>
                <label>Birthday Call</label>
            </value>
            <value>
                <fullName>Courtesy Call</fullName>
                <isActive>false</isActive>
                <label>Courtesy Call</label>
            </value>
            <value>
                <fullName>Follow Up Call</fullName>
                <isActive>false</isActive>
                <label>Follow Up Call</label>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
                <isActive>false</isActive>
                <label>Welcome Call</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>