force-app/main/default/objects/Application_Booking_Call_Detail__c/fields/Follow_Up_Action__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Action__c</fullName>
    <label>Follow Up Action</label>
    <type>TextArea</type>
</CustomField>