force-app/main/default/objects/Application_Booking_Call_Detail__c/listViews/Account_Executive_Refund_queue_Application_Booking_Call_Detail2.listView-meta.xml
<ListView>
    <fullName>Account_Executive_Refund_queue_Application_Booking_Call_Detail2</fullName>
    <filterScope>Queue</filterScope>
    <label>Account Executive Refund queue</label>
    <queue>Account_Executive_Refund_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>