force-app/main/default/objects/Application_Booking_Call_Detail__c/listViews/Cashier_Email_Application_Booking_Call_Detail1.listView-meta.xml
<ListView>
    <fullName>Cashier_Email_Application_Booking_Call_Detail1</fullName>
    <filterScope>Queue</filterScope>
    <label>Cashier Email</label>
    <queue>Cashier_Email</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>