force-app/main/default/objects/Application_Booking_Call_Detail__c/listViews/Respective_department_Queue_Application_Booking_Call_Detail.listView-meta.xml
<ListView>
    <fullName>Respective_department_Queue_Application_Booking_Call_Detail</fullName>
    <filterScope>Queue</filterScope>
    <label>Respective department Queue</label>
    <queue>Respective_department_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>