force-app/main/default/objects/Application_Booking_Call_Detail__c/listViews/Treasury_Refund_queue_Application_Booking_Call_Detail.listView-meta.xml
<ListView>
    <fullName>Treasury_Refund_queue_Application_Booking_Call_Detail</fullName>
    <filterScope>Queue</filterScope>
    <label>Treasury Refund queue</label>
    <queue>Treasury_Refund_queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>